<resources>
    <string name="app_name">ServiceApp</string>
    <string name="proceed">Proceed</string>
    <string name="run_check">Run inspection</string>
    <string name="update_entry">Update entry</string>
    <string name="insert_entry">Insert entry</string>
    <string name="available_entries">Available entries</string>
    <string name="done">Done</string>
    <string name="total_kms">Please, provide the total kms of the vehicle in the input below, and press \"Proceed\".</string>
    <string name="results">Results</string>
    <string name="title_activity_update">Update existing entry.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_check">Run Inspection</string>
    <string name="vehicle_kms">Vehicle kms</string>
    <string name="title_activity_available">Available entries</string>
    <string name="welcome_message">This app will help you manage your vehicle\'s periodic maintenance.\nTo continue, select one of the options below.</string>
    <string name="thanks">Thank you for using ServiceApp</string>
    <string name="insert_new_entry">Insert new entry</string>
    <string name="title_activity_insert">Insert new entry</string>
    <string name="textview_update">Select the spare part you wish to update, provide the data that you want to update, and press \"Proceed\".</string>
    <string name="textview_delete">Select the spare part you wish to delete, and press \"Proceed\".</string>
    <string name="textview_insert">Provide the data below and press \"Proceed\".</string>
    <string name="spare_part">Select spare part</string>
    <string name="kms_changed">Kms changed</string>
    <string name="kms_interval">Kms interval</string>
    <string name="date_changed">Date changed (Use ISO format: e.g. 2016-01-01)</string>
    <string name="date_interval">Date interval (in months)</string>
    <string name="select_the_date">Select the date. Defaults to today.</string>
    <string name="delete_entry">Delete entry</string>
    <string name="title_activity_delete">Delete an existing entry</string>
    <string name="about">About</string>
    <string name="title_activity_about">About this app</string>
    <string name="serviceapp">ServiceApp</string>
    <string name="about_body">Thank you for using ServiceApp.\n\nThis app intends to help you simplify and automate the management of the periodic maintenance of your vehicle.\n\nThe app was designed to be simple, easy and straightforward.
        It comes with a pre-populated database of the most common spare parts. You must update these initial entries, according to your vehicle specs.
        Moreover, you can easily add or remove entries, to suit your specific needs.\n\nFor suggestions or bugs, please visit the project\'s GitHub url:\nhttps://github.com/Vaggos/ServiceApp_Android\n\nFor questions or anything else, you can email me at the email provided below.\n\nIf you find this app useful, consider taking a quick read of the \"Donate\" portion of the app, by clicking the \"Donate\" button below.\n\nAuthor: Vagelis Prokopiou.\nEmail: <a href="mailto:drz4007@gmail.com">drz4007@gmail.com</a>
    </string>
    <string name="title_activity_donate">Donate</string>
    <string name="textView_body_donate">This app has been kept clean from annoying advertisements.\n\nFurthermore, all the features that may be added to future versions (according to the feedback that I will receive), will be available for all, for free.
        There will not be a \"Lite\" and a paid \"Pro\" version.
        This project is free and open source.\n\nIf you find this app useful and want to give back, to help further development, or you are appreciative and want to support open source, you can donate by visiting the following url:\nhttps://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=ARHBWV2HYUHHU\n\nAlternatively, you can also \"donate\" code. To do this, visit the project\'s GitHub url:\nhttps://github.com/Vaggos/ServiceApp_Android\n\nEither way, enjoy ServiceApp!
    </string>
    <string name="spare_part_to_insert">Spare part to insert</string>
</resources>
