<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.vaggos.serviceapp.MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".3">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView_1" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/total_kms"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/editText_total_kms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/results"
                    android:id="@+id/textView_results"
                    android:layout_below="@+id/editText_total_kms"
                    android:layout_alignRight="@+id/textView"
                    android:layout_alignEnd="@+id/textView"
                    android:textColor="#000000" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight=".7">

        <ScrollView
            android:id="@+id/scrollView_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_proceed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/scrollView_2"
                    android:text="@string/proceed" />

                <Button
                    android:id="@+id/btn_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/scrollView_2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/run_check" />

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/scrollView_2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/update_entry" />

                <Button
                    android:id="@+id/btn_insert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/scrollView_2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/insert_entry" />

                <Button
                    android:id="@+id/btn_available"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/scrollView_2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/available_entries" />

                <Button
                    android:id="@+id/btn_done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/scrollView_2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/done" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</LinearLayout>
